--- a/packages/polar-karma/package.json
+++ b/packages/polar-karma/package.json
@@ -7,7 +7,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "karma": "=6.3.2",
+    "karma": "=6.3.4",
     "karma-chai": "=0.1.0",
     "karma-chrome-launcher": "=3.1.0",
     "karma-firefox-launcher": "=2.1.1",
@@ -16,9 +16,16 @@
     "karma-safari-launcher": "=1.0.0",
     "karma-sourcemap-loader": "=0.3.8",
     "karma-spec-reporter": "=0.0.32",
-    "karma-typescript": "=5.5.1",
-    "karma-typescript-es6-transform": "=5.5.1",
+    "karma-typescript": "=5.5.2",
+    "karma-typescript-es6-transform": "=5.5.2",
     "karma-webpack": "=5.0.0",
-    "puppeteer": "=9.1.1"
+    "puppeteer": "=9.1.1",
+    "@babel/plugin-transform-runtime": "=7.15.0",
+    "@babel/plugin-transform-spread": "=7.14.6",
+    "@babel/plugin-transform-classes": "=7.15.4",
+    "@babel/plugin-proposal-object-rest-spread": "=7.15.6",
+    "babel-preset-es2015": "=6.24.1",
+    "babel-preset-react": "=6.24.1",
+    "babel-preset-stage-0": "=6.24.1"
   }
 }
