--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -254,7 +254,11 @@ jobs:
             git tag -a "$NEW_VERSION" -m "automated tag version $NEW_VERSION"
             LATEST_VERSION=$(git tag | tr - \~ | sort -V | tr \~ - | tail -n1)
             echo -e "Current Latest Version is $LATEST_VERSION" && echo -e "Pushing New Tag"
-            ~/go/bin/ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${LATEST_VERSION}
+            LOG=$(git log --pretty=format:"• %s" --no-merges $NEW_VERSION...$CURRENT_VERSION | grep "• feat:\|• fix:\|• docs:\|• style:\|• refactor:\|• perf:\|• test:\|• build:\|• ci:\|• chore:\|• revert:" | sort | uniq)
+            ~/go/bin/ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -b ${LOG} -delete ${LATEST_VERSION}
+            echo 'export DATE=$(date +"%a %b %d %Y")' >> $BASH_ENV
+            echo 'export TAG="$NEW_VERSION"' >> $BASH_ENV
+            echo 'export CHANGELOG="$LOG"' >> $BASH_ENV
       - run:
           name: Setup Credentials and Deploy Packages to Verdaccio
           no_output_timeout: 120m
@@ -277,6 +281,57 @@ jobs:
             cd /home/circleci/polar-hooks
             rm -rf node_modules && rm -rf functions/node_modules && yarn install && (cd functions && yarn install)
             time firebase deploy --only functions
+      - slack/notify:
+          custom: |
+            {
+              "blocks": [
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "New Version Released :tada::tada:"
+                  }
+                },
+                {
+                  "type": "section",
+                  "fields": [
+                    {
+                      "type": "mrkdwn",
+                      "text": "*TAG:*\n • $TAG"
+                    },
+                    {
+                      "type": "mrkdwn",
+                      "text": "*When:*\n • $DATE"
+                    }
+                  ]
+                },
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "*Log:*\n ```$CHANGELOG```"
+                  }
+                },
+                {
+                  "type": "actions",
+                  "elements": [
+                    {
+                      "type": "button",
+                      "text": {
+                        "type": "plain_text",
+                        "text": "View on Github",
+                        "emoji": true
+                      },
+                      "value": "click_me_123",
+                      "style": "primary",
+                      "url": "https://github.com/polar-app/polar-app/releases/tag/$TAG",
+                      "action_id": "button-action"
+                    }
+                  ]
+                }
+              ]
+            }
+          event: always
 
 # ~ Define Custom Executors
 executors:
