--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -257,9 +257,9 @@ jobs:
             echo -e "Current Latest Version is $LATEST_VERSION" && echo -e "Pushing New Tag"
             LOG=$(git log --pretty=format:"• %s" --no-merges $NEW_VERSION...$CURRENT_VERSION | grep "• feat:\|• fix:\|• docs:\|• style:\|• refactor:\|• perf:\|• test:\|• build:\|• ci:\|• chore:\|• revert:" | sort | uniq)
             ~/go/bin/ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${LATEST_VERSION}
-            echo 'export DATE=$(date +"%a %b %d %Y")' >> $BASH_ENV
-            echo 'export TAG=$(git tag | tr - \~ | sort -V | tr \~ - | tail -n1)' >> $BASH_ENV
-            echo 'export CHANGELOG=$(git log --pretty=format:"• %s" --no-merges $NEW_VERSION...$CURRENT_VERSION | grep "• feat:\|• fix:\|• docs:\|• style:\|• refactor:\|• perf:\|• test:\|• build:\|• ci:\|• chore:\|• revert:" | sort | uniq)' >> $BASH_ENV
+            echo "export DATE=$(date +"%a %b %d %Y")" >> $BASH_ENV
+            echo "export TAG=$LATEST_VERSION" >> $BASH_ENV
+            echo "export CHANGELOG=$(git log --pretty=format:"• %s" --no-merges $NEW_VERSION...$CURRENT_VERSION | grep "• feat:\|• fix:\|• docs:\|• style:\|• refactor:\|• perf:\|• test:\|• build:\|• ci:\|• chore:\|• revert:" | sort | uniq)" >> $BASH_ENV
             source $BASH_ENV
       - run:
           name: Setup Credentials and Deploy Packages to Verdaccio
