--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -255,7 +255,7 @@ jobs:
             git tag -a "$NEW_VERSION" -m "automated tag version $NEW_VERSION"
             LATEST_VERSION=$(git tag | tr - \~ | sort -V | tr \~ - | tail -n1)
             echo -e "Current Latest Version is $LATEST_VERSION" && echo -e "Pushing New Tag"
-            LOG=$(git log --pretty=format:"• %s" --no-merges $NEW_VERSION...$CURRENT_VERSION | grep "• feat:\|• fix:\|• docs:\|• style:\|• refactor:\|• perf:\|• test:\|• build:\|• ci:\|• chore:\|• revert:" | sort | uniq)
+            LOG=$(git log --pretty=format:"• %s\\n" --no-merges $LATEST_VERSION...$CURRENT_VERSION | grep "• feat:\|• fix:\|• docs:\|• style:\|• refactor:\|• perf:\|• test:\|• build:\|• ci:\|• chore:\|• revert:" | sort | uniq | tr '\r\n' ' ' )
             ~/go/bin/ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${LATEST_VERSION}
             echo "export DATE=$(date +\"%a %b %d %Y\")" >> $BASH_ENV
             echo "export TAG=\"$LATEST_VERSION\"" >> $BASH_ENV
@@ -296,11 +296,14 @@ jobs:
                   }
                 },
                 {
+                  "type": "divider"
+                },
+                {
                   "type": "section",
                   "fields": [
                     {
                       "type": "mrkdwn",
-                      "text": "*TAG:*\n • $TAG"
+                      "text": "*Tag:*\n • $TAG"
                     },
                     {
                       "type": "mrkdwn",
@@ -309,11 +312,17 @@ jobs:
                   ]
                 },
                 {
+                  "type": "divider"
+                },
+                {
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "*Log:*\n ```$CHANGELOG```"
+                    "text": "*Changelog:*\n $CHANGELOG"
                   }
+                },
+                {
+                  "type": "divider"
                 },
                 {
                   "type": "actions",
@@ -325,10 +334,8 @@ jobs:
                         "text": "View on Github",
                         "emoji": true
                       },
-                      "value": "click_me_123",
                       "style": "primary",
                       "url": "https://github.com/polar-app/polar-app/releases/tag/$TAG",
-                      "action_id": "button-action"
                     }
                   ]
                 }
