--- a/packages/polar-bookshelf/package.json
+++ b/packages/polar-bookshelf/package.json
@@ -104,6 +104,7 @@
     "timekeeper": "2.2.0",
     "userflow.js": "=2.2.0",
     "wait-for-expect": "3.0.1",
+    "webpack-cli": "^4.8.0",
     "workbox-cli": "=5.1.3"
   },
   "dependencies": {
