--- a/packages/polar-cache/package.json
+++ b/packages/polar-cache/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "polar-answers",
+  "name": "polar-cache",
   "version": "0.0.0",
   "description": "",
   "scripts": {
@@ -28,13 +28,7 @@
   },
   "dependencies": {
     "polar-firebase-admin": "0.0.0",
-    "@google-cloud/language": "=4.2.5",
-    "gpt-3-encoder": "^1.1.3",
-    "polar-answers-api": "0.0.0",
-    "polar-blocks": "0.0.0",
     "polar-firebase": "0.0.0",
-    "polar-google-cloud-language": "0.0.0",
-    "polar-pdf": "0.0.0",
     "polar-shared": "0.0.0"
   },
   "files": [
