--- a/packages/polar-answers/package.json
+++ b/packages/polar-answers/package.json
@@ -35,7 +35,8 @@
     "polar-firebase": "0.0.0",
     "polar-google-cloud-language": "0.0.0",
     "polar-pdf": "0.0.0",
-    "polar-shared": "0.0.0"
+    "polar-shared": "0.0.0",
+    "polar-cache": "0.0.0"
   },
   "files": [
     "**/*.js",
